

  26 Apr 2005; Brian Jackson <iggy@gentoo.org> image/etc/fstab, src/rc.c:
  fix a few little issues for spyderous

  06 Mar 2005; Brian Jackson <iggy@gentoo.org> :
  got everything really working this time, now for cleanups

  06 Mar 2005; Brian Jackson <iggy@gentoo.org> :
  lots of fixes, now fully works to startup a system, still a few bugs that Im
  tracking down, and theres plenty more to do, but I'm considering a release
  to get some testers

  03 Mar 2005; Ned Ludd <solar@gentoo.org> :
  Removed no longer needed malloc(), free() from rc.c

  28 Feb 2005; Brian Jackson <iggy@gentoo.org> :
  imported some init scripts from baselayout
  minimal versions of anything I didn't pull from baselayout
  added dev/.keep
  few changes to etc/inittab
  more work on sbin/{rc,runscript}

  27 Feb 2005; Brian Jackson <iggy@gentoo.org> :
  Some small changes
  added devfsd.conf
  some fixes to the source files from solar
  some inittab work (still needs more)

  26 Feb 2005; Brian Jackson <iggy@gentoo.org> :
  Initial commit
  sbin/{rc,runscript,functions.sh} still need a lot of work
  etc/inittab still needs a lot of work too
  need to add default init scripts for the stuff that comes with regular
	baselayout
  I'll hopefully get to the other stuff soon, I mostly just want to
	commit so people can see what I'm up to
  This isn't useful yet, don't even try it
