@@ -1,5 +1,9 @@
 
 
+  27 Apr 2005; Brian Jackson <iggy@gentoo.org> src/baselayout-lite.h,
+  src/common.c, src/runscript.c:
+  added copyright headers to the rest of the source files
+
   26 Apr 2005; Brian Jackson <iggy@gentoo.org> image/etc/fstab, src/rc.c:
   fix a few little issues for spyderous
 
